...
    <item name="movie_title" type="id"/>
    <item name="movie_director" type="id"/>
    <item name="movie_year" type="id"/>
    <item name="app_image" type="id"/>
    <!-- Search Movie Activity -->
    <item name="progress_spinner" type="id"/>
    <item name="recycler_view" type="id"/>
    <item name="more" type="id"/>
    <!-- Movie Details Activity -->
    <item name="appbar" type="id"/>
    <item name="main_collapsing" type="id"/>
    <item name="main_backdrop" type="id"/>
    <item name="main_toolbar" type="id"/>
...
    <item name="dvd" type="id"/>
    <item name="boxOffice" type="id"/>
    <item name="production" type="id"/>
    <item name="website" type="id"/>
    <item name="grid_layout" type="id"/>
    <!-- Menu -->
    <item name="search" type="id"/>
    <item name="filters" type="id"/>
    <!-- Filters -->
    <item name="spinnerYear" type="id"/>
    <item name="spinnerType" type="id"/>
</resources>
